--- a/src/components/ReachOut/form.css
+++ b/src/components/ReachOut/form.css
@@ -1,6 +1,20 @@
-h1{
+h1 {
     text-align: center;
-    font-size: 38px;
-    margin-top: 40px;   /* Remove it when adding other css properties */
-    
+    font-size: 2.5vw;
+    color: var(--blue);
+    font-weight: 500;
+}
+
+h3 {
+    font-weight: 400;
+    text-align: center;
+    font-size: 1.3vw;
+    color: #5D5D5D;
+    margin: 1vw 0;
+}
+
+iframe { /*still not centered*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
