--- a/src/components/Alumni/Alumni.css
+++ b/src/components/Alumni/Alumni.css
@@ -1,4 +1,4 @@
-.AlumniContainer{
+.AlumniContainer {
     /* background-color: rgb(229, 180, 117); */
     width: 100%;
     display: flex;
@@ -6,35 +6,51 @@
     justify-content: center;
     align-items: center;
 }
-.AlumniHead{
-    font-size: 33px;
-    margin: 40px 0px 20px 0px;
+
+.AlumniHead {
+    font-size: 2.5vw;
+    color: var(--blue);
+    font-weight: 500;
 }
-.alumnidata{
-    width: 90%;
+
+.alumnidata {
+    /* width: 90%; */
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    
 }
-.cardContainer{
+
+.cardContainer {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     width: 234px;
     height: 300px;
     margin: 20px 12px;
     background-color: rgb(236, 236, 236);
 }
-.userImg{
+
+.userImg {
     width: 100%;
     height: 75%;
-    background-color: rgb(188, 188, 188 );
+    background-color: rgb(188, 188, 188);
 }
-.userDetail{
+
+.userDetail {
     padding: 5px 10px;
+    color: #5D5D5D
 }
-.userName{
-    font-weight: 800;
+
+.userName {
+    font-weight: 500;
+    color: #000;
 }
-.morebtn{
+
+.morebtn {
+    font-size: 1.2vw;
+    background-color: var(--blue);
+    color: white;
+    border: 0;
+    border-radius: 4px;
     cursor: pointer;
-    border: 2px solid black;
+    padding: 1vw 2vw;
+    margin-bottom: 4vw;
 }
