--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -1,41 +1,59 @@
-:root{
-    --blue:#303090;
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;500&display=swap');
+
+* {
+    font-family: 'Roboto', sans-serif;
+    background-color: #FCFCFC;
 }
-.NavContainer{
+
+:root {
+    --blue: #303090;
+}
+
+.NavContainer {
     width: 100%;
-    height: 100px;
-    /* background-color: antiquewhite; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1em;
+    padding: 0.2vw 0.5vw;
+    position: fixed;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
-.domain_img{                    /* cllg logo */
-    width: 80px; 
+
+/* clg logo */
+.DomainImg {
+    width: 70%;
 }
-.nav_common{                    /* left and right div of nav */
+
+/* left and right div of nav */
+.NavLeft, .NavRight {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.domain_name{                   /* website/domain name */
-    font-size: 25px;
+
+/* website/domain name */
+.DomainName {
+    margin: 0;
+    font-size: 2vw;
     color: var(--blue);
-    padding: 0 5px;
+    font-family: 'Playfair Display', serif;
 }
-.links{
-    font-size: 18px;
+
+.links {
+    font-size: 1.4vw;
     color: var(--blue);
-    margin: 0 5px;
     cursor: pointer;
+    margin: 1.8vw;
 }
-.button{                       /* login button */
-    font-size: 14px;
-    width: 50px;
-    height: 35px;
+
+/* login button */
+.button {
+    font-size: 1.4vw;
+    width: 6vw;
+    height: 3vw;
     background-color: var(--blue);
     color: white;
     border: 0;
-    border-radius: 3px;
+    border-radius: 4px;
     cursor: pointer;
 }
