--- a/src/components/ReachOut/form.css
+++ b/src/components/ReachOut/form.css
@@ -13,8 +13,9 @@ h3 {
     margin: 1vw 0;
 }
 
-iframe { /*still not centered*/
+.form { 
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100vh;
 }
