--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -15,7 +15,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.2vw 0.5vw;
-    position: fixed;
+    /* position: fixed; */
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
