--- a/src/components/AddProfile/index.css
+++ b/src/components/AddProfile/index.css
@@ -1,12 +1,58 @@
-.addP-container{
+.addP-container {
     width: 100%;
-    height: 100px;
-    background-color: aqua;
-    padding: 1vw;
+    height: 100vh;
+    padding-left: 5vw;
+    padding-top: 2vw;
 }
-h2{
-    font-size: 20px;
+
+h2 {
+    font-size: 2vw;
+    color: var(--blue);
+    font-weight: 500;
 }
-button{
+
+.subheading {
+    color: #5E5E5E;
+    font-size: 1.2vw;
+    padding: 0.5vw 0;
+}
+
+button {
+    font-size: 1.2vw;
+    width: 7vw;
+    height: 3vw;
+    background-color: var(--blue);
+    color: white;
+    border: 0;
+    border-radius: 4px;
     cursor: pointer;
+}
+
+.profileForm {
+    font-size: 1.3vw;
+    padding: 2vw 0;
+}
+
+select, input {
+    font-size: 1.2vw;
+    padding: 4px;
+    border: 2px solid #D9D9D9;
+    border-radius: 4px;
+    background-color: #fff;
+    margin: 8px;
+}
+
+input {
+    width: 20%;
+}
+
+.details1 {
+    display: flex;
+    justify-content: space-between;
+    width: 35%;
+    margin-bottom: 0.5vw;
+}
+
+.details2 {
+    margin-bottom: 1vw;
 }
