added interactivity to home page
+ other minor changes

--- a/src/components/Alumni/Alumni.css
+++ b/src/components/Alumni/Alumni.css
@@ -18,6 +18,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 16px;
+    margin-bottom: 24px;
 }
 
 .cardContainer {
@@ -26,6 +28,14 @@
     height: 300px;
     margin: 20px 12px;
     background-color: rgb(236, 236, 236);
+}
+
+.cardContainer {
+    transition: transform 0.3s ease-in-out;
+}
+
+.cardContainer:hover {
+    transform: scale(1.1);
 }
 
 .userImg {
@@ -53,4 +63,8 @@
     cursor: pointer;
     padding: 1vw 2vw;
     margin-bottom: 4vw;
+}
+
+.morebtn:hover {
+    background-color: #202060;
 }
