--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.2vw 0.5vw;
+    padding: 16px;
     /* position: fixed; */
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
@@ -100,4 +100,20 @@
     border: 0;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.button:hover {
+    background-color: #202060;
+}
+
+a, a:visited {
+    color: var(--blue);
+}
+
+a:hover, .links:hover {
+    color: #7575B5;
+}
+
+a:active {
+    color: #202060;
 }
