styled login page
+ other minor changes

--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -38,6 +38,7 @@
     font-size: 2vw;
     color: var(--blue);
     font-family: 'Playfair Display', serif;
+    cursor: pointer;
 }
 
 /* Nav other links like alumni about */
