--- a/src/components/AddResume/Resume.css
+++ b/src/components/AddResume/Resume.css
@@ -1,8 +1,8 @@
 :root {
     --blue: #303090;
 }
-.Resume-container{
-    /* background-color: antiquewhite; */
+
+.Resume-container {
     width: 100%;
     padding: 30px 0 0 30px;
     display: flex;
@@ -10,23 +10,31 @@
     flex-direction: column;
 }
 
-.add-content{
-    margin:5px 0;
-    color: rgb(177, 177, 177);
-}
-.resume-btn-class{
+.resume-btn-class {
     margin: 20px 0 20px 0;
     width: 100%;
 }
-.resume-btn-class button{
+
+.resume-btn-class button {
     width: 12vw;
     height: 6vh;
     font-weight: 500;
-    background-color:white ;
+    background-color: white;
     color: var(--blue);
     border: 3px solid var(--blue);
     cursor: pointer;
+    transition: background-color 0.5s, color 0.2s;
 }
-.resume-btn-class span{
+
+.resume-btn-class button:hover {
+    background-color: var(--blue);
+    color: #fff;
+}
+
+.resume-btn-class span {
     margin: 0 1vw;
+}
+
+.saveBtn {
+    margin-top: 1vw;
 }
