--- a/src/components/AddProfile/index.css
+++ b/src/components/AddProfile/index.css
@@ -29,8 +29,16 @@ button {
 }
 
 .profileForm {
+    
     font-size: 1.3vw;
     padding: 2vw 0;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+
+.formData{
+    width: 65%;
 }
 
 select, input {
@@ -55,4 +63,15 @@ input {
 
 .details2 {
     margin-bottom: 1vw;
+}
+/* Img styling*/
+.formImg{
+    width: 35%;
+}
+.formImg img{
+    width:10vw;
+    margin: 0 0 0 4vw;
+}
+.chhosebtn{
+    width: 16vw;
 }
