--- a/src/components/Alumni_HomePage/Alumni.css
+++ b/src/components/Alumni_HomePage/Alumni.css
@@ -25,7 +25,7 @@
     width: 234px;
     height: 300px;
     margin: 20px 12px;
-    background-color: rgb(236, 236, 236);
+    background-color: transparent;
 }
 
 .userImg {
@@ -35,8 +35,13 @@
 }
 
 .userDetail {
-    padding: 5px 10px;
-    color: #5D5D5D
+    padding: 12px 10px;
+    color: #5D5D5D;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .userName {
