--- a/src/components/Alumni_HomePage/Alumni.css
+++ b/src/components/Alumni_HomePage/Alumni.css
@@ -59,3 +59,12 @@
     padding: 1vw 2vw;
     margin-bottom: 4vw;
 }
+
+.userDetailHome {
+    padding: 12px 10px;
+    color: #5D5D5D;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: space-between;
+}
