--- a/src/components/Alumni_HomePage/Alumni.css
+++ b/src/components/Alumni_HomePage/Alumni.css
@@ -8,9 +8,9 @@
 }
 
 .AlumniHead {
-    font-size: 2.5vw;
     color: var(--blue);
     font-weight: 500;
+    font-size: 32px;
 }
 
 .alumnidata {
@@ -50,13 +50,13 @@
 }
 
 .morebtn {
-    font-size: 1.2vw;
+    font-size: 20px;
     background-color: var(--blue);
     color: white;
     border: 0;
     border-radius: 4px;
     cursor: pointer;
-    padding: 1vw 2vw;
+    padding: 16px 24px;
     margin-bottom: 4vw;
 }
 
@@ -67,4 +67,15 @@
     flex-direction: column;
     width: 100%;
     justify-content: space-between;
+}
+
+@media only screen and (max-width: 800px) {
+    .AlumniHead {
+        font-size: 24px;
+    }
+
+    .morebtn{
+        font-size: 16px;
+        padding: 12px 20px;
+    }
 }
