--- a/src/components/ReachOut/form.css
+++ b/src/components/ReachOut/form.css
@@ -1,6 +1,6 @@
 h1 {
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 24px;
     color: var(--blue);
     font-weight: 500;
 }
@@ -8,7 +8,7 @@ h1 {
 h3 {
     font-weight: 400;
     text-align: center;
-    font-size: 1.3vw;
+    font-size: 20px;
     color: #5D5D5D;
     margin: 1vw 0;
 }
@@ -18,4 +18,13 @@ h3 {
     align-items: center;
     justify-content: center;
     height: 100vh;
+}
+
+@media only screen and (max-width: 800px) {
+    h1{
+        font-size: 20px;
+    }
+    h3{
+        font-size: 16px;
+    }
 }
