--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -18,6 +18,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 16px;
+    margin-bottom: 24px;
 }
 
 .cardContainer {
@@ -28,10 +30,17 @@
     background-color: transparent;
 }
 
+.cardContainer {
+    transition: transform 0.3s ease-in-out;
+}
+
+.cardContainer:hover {
+    transform: scale(1.1);
+}
+
 .userImg {
     width: 100%;
     height: 75%;
-    background-color: rgb(188, 188, 188);
 }
 
 .userDetail {
@@ -47,35 +56,4 @@
 .userName {
     font-weight: 500;
     color: #000;
-}
-
-.morebtn {
-    font-size: 20px;
-    background-color: var(--blue);
-    color: white;
-    border: 0;
-    border-radius: 4px;
-    cursor: pointer;
-    padding: 16px 24px;
-    margin-bottom: 4vw;
-}
-
-.userDetailHome {
-    padding: 12px 10px;
-    color: #5D5D5D;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    justify-content: space-between;
-}
-
-@media only screen and (max-width: 800px) {
-    .AlumniHead {
-        font-size: 24px;
-    }
-
-    .morebtn{
-        font-size: 16px;
-        padding: 12px 20px;
-    }
 }
