--- a/src/components/ReachOut/form.css
+++ b/src/components/ReachOut/form.css
@@ -1,5 +1,10 @@
+#ReachOut {
+    padding: 24px;
+    width: 100vw;
+}
+
 h1 {
-    text-align: center;
+    text-align: left;
     font-size: 24px;
     color: var(--blue);
     font-weight: 500;
@@ -7,24 +12,29 @@ h1 {
 
 h3 {
     font-weight: 400;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     color: #5D5D5D;
     margin: 1vw 0;
 }
 
-.form { 
+.form {
     display: flex;
-    align-items: center;
     justify-content: center;
     height: 100vh;
+    margin: 0;
 }
 
 @media only screen and (max-width: 800px) {
-    h1{
+    h1 {
         font-size: 20px;
     }
-    h3{
+
+    h3 {
         font-size: 16px;
+    }
+
+    #ReachOut {
+        padding: 16px;
     }
 }
