--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -3,13 +3,24 @@
     padding-top: 1vw;
     padding-bottom: 4px;
     font-size: small;
-    border-top: 1px solid #f2f2f2;
+    background-color: var(--blue);
+    color: white;
 }
 
 .pageFooter p {
+    margin-top: 16px;
     margin-bottom: 8px;
 }
 
-.pageFooter a{
-   padding: 4px;
+.pageFooter a {
+    padding: 4px;
+    color: white;
+}
+
+.pageFooter a:hover {
+    color: rgb(223, 223, 223);
+}
+
+.map {
+    border: 0;
 }
