--- a/src/components/Navbar/Nav.css
+++ b/src/components/Navbar/Nav.css
@@ -184,4 +184,9 @@ a:active {
         display: flex;
         flex-direction: column;
     }
+
+    .NavRight-Left-mobile{
+        display: flex;
+        flex-direction: column;
+    }
 }
