--- a/src/components/ReachOut/form.css
+++ b/src/components/ReachOut/form.css
@@ -5,9 +5,10 @@
 
 h1 {
     text-align: center;
-    font-size: 24px;
+    font-size: 28px;
     color: var(--blue);
     font-weight: 500;
+    margin-top: 1vw;
 }
 
 h3 {
