--- a/src/components/Achievers/achievers.css
+++ b/src/components/Achievers/achievers.css
@@ -1,52 +1,50 @@
-.achievers-container{
+.achievers-container, .achievers-card {
     display: flex;
     align-items: center;
     flex-direction: column;
 }
 
-.achievers-container h1{
+.achievers-container h1 {
     margin-bottom: 16px;
 }
 
-.A-CardContainer{
+.A-CardContainer {
     display: flex;
     padding: 16px;
     justify-content: space-between;
     align-items: center;
-}
-
-.achievers-card{
-    width:60%;
+    width: 60%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     transition: 0.5s;
+    margin-bottom: 24px;
 }
 
-.achievers-card:hover{
+.A-CardContainer:hover {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.A-userDetail{
+.A-userDetail {
     display: flex;
     flex-direction: column;
     width: 78%;
 }
 
-.A-userImg{
+.A-userImg {
     width: 20%;
 }
 
-.Name{
+.Name {
     font-size: 18px;
     font-weight: 500;
     color: var(--blue);
 }
 
-.Ach{
-    color:#5d5d5d;
+.Ach {
+    color: #5d5d5d;
     margin-bottom: 8px;
 }
 
-.Desc{
+.Desc {
     margin-bottom: 8px;
     color: #3e3e3e;
 }
