--- a/src/components/Support/support.css
+++ b/src/components/Support/support.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     padding: 2%;
+    margin-bottom: 3vw;
 }
 
 .supportCard:hover {
@@ -23,6 +24,12 @@
 
 .content h1 {
     text-align: left;
+}
+
+.alumniForm{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 800px) {
