--- a/src/components/ChatComponents/index.css
+++ b/src/components/ChatComponents/index.css
@@ -101,7 +101,7 @@
 .welcome-container img{
     height: 20rem;
 }
-.welcome-container span ,h1{
+.welcome-container span {
     color: #9e9ea0;
   }
 
