--- a/src/components/ChatComponents/index.css
+++ b/src/components/ChatComponents/index.css
@@ -1,4 +1,6 @@
+/* ALL Contacts CSS */
 .contacts-container {
+    /* height: 100%; */
     display: grid;
     grid-template-rows: 10% 75% 15%;
     overflow: hidden;
@@ -27,6 +29,8 @@
     align-items: center;
     overflow: auto;
     gap: 0.8rem;
+    height: 79vh;
+    margin: 20px 0;
     /* &::-webkit-scrollbar {
       width: 0.2rem;
       &-thumb {
@@ -70,10 +74,12 @@
 .avatar .selected {
     background-color: #dfdfdf;
 }
-.selected{
+
+.selected {
     background-color: #dfdfdf;
 }
-.current-user {
+
+/* .current-user {
     background-color: #0d0d30;
     display: flex;
     justify-content: center;
@@ -86,22 +92,211 @@
 }
 .current-user .username h2{
     color: white;
-}
+} */
 
 
 /* welcome css */
 
-.welcome-container{
+.welcome-container {
     display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    flex-direction: column;
 }
-.welcome-container img{
+
+.welcome-container img {
     height: 20rem;
 }
+
 .welcome-container span {
     color: #9e9ea0;
-  }
+}
 
+/* chat container css */
+.ChatContainer {
+    display: grid;
+    grid-template-rows: 10% 80% 10%;
+    gap: 0.1rem;
+    overflow: hidden;
+}
+
+.chat-header {
+    background-color: var(--blue);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+}
+
+.user-details {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.avatar img {
+    height: 3rem;
+}
+
+.avatar .username h3 {
+    color: white;
+}
+
+.chat-messages {
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    overflow: auto;
+}
+
+.chat-messages ::-webkit-scrollbar {
+    width: 0.2rem;
+}
+
+.chat-messages ::-webkit-scrollbar-thumb {
+    background-color: #ffffff39;
+    width: 0.1rem;
+    border-radius: 1rem;
+}
+
+.message {
+    display: flex;
+    align-items: center;
+}
+
+.message .content {
+    max-width: 40%;
+    overflow-wrap: break-word;
+    padding: 1rem;
+    font-size: 1.1rem;
+    border-radius: 1rem;
+    color: #a21d1d;
+}
+
+.sended {
+    justify-content: flex-end;
+}
+
+.sended .content {
+    background-color: #4f04ff21;
+}
+
+.recieved {
+    justify-content: flex-start;
+}
+
+.recieved .content {
+    background-color: #9900ff20;
+}
+
+
+/* Chat Input Css */
+.chatInputContainer {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 5% 95%;
+    background-color: #080420;
+    padding: 0 2rem;
+}
+
+@media screen and (min-width: 720px) and (max-width: 1080px) {
+    .chatInputContainer {
+        padding: 0 1rem;
+        gap: 1rem;
+    }
+
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    color: white;
+    gap: 1rem;
+}
+
+.button-container .emoji {
+    position: relative;
+}
+
+.button-container .emoji svg {
+    font-size: 1.5rem;
+    color: #ffff00c8;
+    cursor: pointer;
+}
+aside.EmojiPickerReact.epr-main {
+    border-color: var(--epr-picker-border-color);
+    border-radius: var(--epr-picker-border-radius);
+    border-style: solid;
+    border-width: 1px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+}
+.emoji .EmojiPickerReact {
+    position: absolute;
+    top: -474px;
+    background-color: white;
+    box-shadow: 0 5px 10px gray;
+    border-color: gray;
+}
+
+.emoji-scroll-wrapper::-webkit-scrollbar {
+    background-color: #080420;
+    width: 5px;
+
+}
+
+.emoji-scroll-wrapper::-webkit-scrollbar-thumb {
+    background-color: #9a86f3;
+}
+
+.emoji-categories button {
+    filter: contrast(0);
+}
+.emoji-search {
+    background-color: transparent;
+    border-color: #9a86f3;
+  }
+  .emoji-group:before {
+    background-color: #080420;
+  }
+  .input-container {
+    width: 100%;
+    border-radius: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    background-color: #ffffff34;
+  }
+  .input-container  input {
+    width: 90%;
+    height: 60%;
+    background-color: transparent;
+    color: white;
+    border: none;
+    padding-left: 1rem;
+    font-size: 1.2rem;
+  }
+  .input-container  input::selection {
+    background-color: #9a86f3;
+    border: none;
+  }
+  .input-container  input:focus {
+    outline: none;
+    border: none;
+  }
+  .input-container button {
+    padding: 0.3rem 2rem;
+    border-radius: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #9a86f3;
+    border: none;
+  }
+  .input-container button  svg {
+    font-size: 2rem;
+    color: white;
+  }
