--- a/src/pages/Chat/chat.css
+++ b/src/pages/Chat/chat.css
@@ -1,8 +1,9 @@
 :root {
   --blue: #303090;
+  --white: rgb(227, 227, 227);
 }
 .chatMainConatiner{
-    height: 100vh;
+  height: 88vh;
   width: 99vw;
   display: flex;
   flex-direction: column;
@@ -14,7 +15,7 @@
 .chatSubcontainer{
     height: 85vh;
     width: 85vw;
-    background-color: #82828276;
+    background-color: var(--white);    /* background of chatting area*/
     display: grid;
     grid-template-columns: 25% 75%;
 }
