--- a/src/components/ChatComponents/index.css
+++ b/src/components/ChatComponents/index.css
@@ -4,7 +4,8 @@
     display: grid;
     grid-template-rows: 10% 75% 15%;
     overflow: hidden;
-    background-color: #080420;
+    /* background-color: #080420; */
+    background-color: #d5d5fe;
 }
 
 .brand {
@@ -51,16 +52,17 @@
 }
 
 .contact {
-    background-color: #ffffff34;
+    background-color: #d5d5fe;
     min-height: 5rem;
     cursor: pointer;
     width: 90%;
-    border-radius: 0.2rem;
+    /* border-radius: 0.2rem; */
     padding: 0.4rem;
     display: flex;
     gap: 1rem;
     align-items: center;
     transition: 0.2s ease-in-out;
+    border-bottom: 1px solid #aaaafc;
 }
 
 .avatar img {
@@ -71,12 +73,18 @@
     color: white;
 }
 
+.username h3 {
+    color: rgb(45, 45, 45);
+}
+
 .avatar .selected {
     background-color: #dfdfdf;
 }
 
 .selected {
-    background-color: #dfdfdf;
+    background-color: #e7e7ff;
+    border-radius: 4px;
+    border: 1px solid #aaaafc;
 }
 
 /* .current-user {
@@ -103,15 +111,16 @@
     align-items: center;
     color: white;
     flex-direction: column;
+    background-color: rgb(251, 251, 251);
 }
 
 .welcome-container img {
     height: 20rem;
 }
 
-.welcome-container span {
+/* .welcome-container span {
     color: #9e9ea0;
-}
+} */
 
 /* chat container css */
 .ChatContainer {
@@ -119,14 +128,16 @@
     grid-template-rows: 10% 80% 10%;
     gap: 0.1rem;
     overflow: hidden;
+    background-color: #fff;
 }
 
 .chat-header {
-    background-color: var(--blue);
+    background-color: #f9f9f9;
+    border: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 2rem;
+    padding: 2rem;
 }
 
 .user-details {
@@ -149,6 +160,8 @@
     flex-direction: column;
     gap: 1rem;
     overflow: auto;
+    background-color: #ffffff;
+    border-right: 1px solid #f9f9f9;
 }
 
 .chat-messages ::-webkit-scrollbar {
@@ -172,7 +185,7 @@
     padding: 1rem;
     font-size: 1.1rem;
     border-radius: 1rem;
-    color: #a21d1d;
+    color: #000000;
 }
 
 .sended {
@@ -180,15 +193,16 @@
 }
 
 .sended .content {
-    background-color: #4f04ff21;
+    background-color: #c5c5ff;
 }
+
 
 .recieved {
     justify-content: flex-start;
 }
 
 .recieved .content {
-    background-color: #9900ff20;
+    background-color: #e2e2ff;
 }
 
 
@@ -197,8 +211,8 @@
     display: grid;
     align-items: center;
     grid-template-columns: 5% 95%;
-    background-color: #080420;
-    padding: 0 2rem;
+    background-color: #e7e7ff;
+    padding: 0px 16px;
 }
 
 @media screen and (min-width: 720px) and (max-width: 1080px) {
@@ -222,9 +236,11 @@
 
 .button-container .emoji svg {
     font-size: 1.5rem;
-    color: #ffff00c8;
+    color: var(--blue);
+    font-size: 2rem;
     cursor: pointer;
 }
+
 aside.EmojiPickerReact.epr-main {
     border-color: var(--epr-picker-border-color);
     border-radius: var(--epr-picker-border-radius);
@@ -234,6 +250,7 @@ aside.EmojiPickerReact.epr-main {
     flex-direction: column;
     position: absolute;
 }
+
 .emoji .EmojiPickerReact {
     position: absolute;
     top: -474px;
@@ -255,48 +272,56 @@ aside.EmojiPickerReact.epr-main {
 .emoji-categories button {
     filter: contrast(0);
 }
+
 .emoji-search {
     background-color: transparent;
     border-color: #9a86f3;
-  }
-  .emoji-group:before {
+}
+
+.emoji-group:before {
     background-color: #080420;
-  }
-  .input-container {
+}
+
+.input-container {
     width: 100%;
-    border-radius: 2rem;
+    border-radius: 4px;
     display: flex;
     align-items: center;
     gap: 2rem;
-    background-color: #ffffff34;
-  }
-  .input-container  input {
-    width: 90%;
-    height: 60%;
     background-color: transparent;
-    color: white;
+}
+
+.input-container input {
+    width: 90%;
+    /* height: 60%; */
+    background-color: transparent;
+    color: #000;
     border: none;
-    padding-left: 1rem;
+    /* padding-left: 1rem; */
     font-size: 1.2rem;
-  }
-  .input-container  input::selection {
+}
+
+.input-container input::selection {
     background-color: #9a86f3;
     border: none;
-  }
-  .input-container  input:focus {
+}
+
+.input-container input:focus {
     outline: none;
     border: none;
-  }
-  .input-container button {
+}
+
+.input-container button {
     padding: 0.3rem 2rem;
-    border-radius: 2rem;
+    border-radius: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #9a86f3;
+    background-color: transparent;
     border: none;
-  }
-  .input-container button  svg {
-    font-size: 2rem;
-    color: white;
-  }
+}
+
+.input-container button svg {
+    font-size: 1.5rem;
+    color: var(--blue);
+}
