--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -37,3 +37,20 @@
 .feature-card-img img {
     width: 100%;
 }
+
+@media only screen and (max-width: 800px) {
+    .feature-card {
+        width: 80%;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .feature-card-txt p {
+        font-size: 16px;
+        line-height: 1.3rem;
+    }
+
+    #last-card{
+        margin-bottom: 2rem;
+    }
+}
