--- a/src/components/InstaPosts/Insta.css
+++ b/src/components/InstaPosts/Insta.css
@@ -9,3 +9,9 @@
     font-size: 28px;
     margin-top: 1vw;
 }
+
+@media only screen and (max-width: 800px){
+    .instaContainer h1{
+        font-size: 20px;
+    }
+}
